<resources>
    <string name="app_name">Sprint1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="destinations_screen">Destinations Screen</string>
    <string name="logistics_screen">Logistics Screen</string>
    <string name="dining_screen">Dining Establishments Screen</string>
    <string name="accommodations_screen">Accommodations Screen</string>
    <string name="travel_screen">Travel Community Screen</string>
    <string name="welcome_to">Welcome to</string>
    <string name="wander_sync">WanderSync!</string>
    <string name="login">Login</string>
    <string name="create_login">Login</string>
    <string name="create_acc">Create an Account</string>
    <string name="register">Register</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="start">Start</string>
    <string name="quit">Quit</string>
</resources>